# pydigest-classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_RU.md  batcher.py  classifier.py  config.py  fabfile.py  nbic_requirements.md  pipeline_example.py  pyproject.toml  report.py  requirements.txt  research_log  text_density.py  text_metrics.py  train.py  vectorizer.py
.github/workflows/: main.yml  model.yml
api/: classifier_64.pkl  classifier_api.py  classifier_dump.pkl  wsgi.py
deploy/: Dockerfile  docker_compose.prod.yml  fabfile.py  nginx.conf  uwsgi.ini
src/api/: server.py  test_api.py  wsgi.py
src/model/: classifier.py  report.py  text_metrics.py  train.py  vectorizer.py
